# qtflow

./: .gitignore  .gitmodules  CMakeLists.txt  NicePyConsole.cpp  NicePyConsole.h  NicePyConsole.pro  PygmentsHighlighter.cpp  PygmentsHighlighter.h  PygmentsHighlighter.py  PythonCompleter.cpp  PythonCompleter.h  PythonCompleter.py  PythonCompleterPopup.cpp  PythonCompleterPopup.h  PythonQt.prf  PythonQt_QtAll.prf  README.md  SimpleConsole.cpp  SimpleConsole.h  app.h  buildenvironment.cpp  buildenvironment.h  buildenvironment.ui  buildflow.cpp  buildflow.ui  buildsteps.cpp  buildsteps.h  buildsteps.ui  codeeditorwidget.cpp  codeeditorwidget.h  common.h  console.ui  constants.h  contactplacement.cpp  contactplacement.h  contactplacement.ui  def_parser.yy  def_scanner.ll  defdata.cpp  defdata.h  (+188 more)
QtFlow/: CMakeLists.txt  buildflow.h  buildflow.ui  editortabmanager.cpp  editortabmanager.h  files.ui  grid.cpp  grid.ui  librarysettings.ui  main.cpp  mainapplication.cpp  mainwindow.cpp  modules.ui  moduleslistmodel.h  new.h  new.ui  project.cpp  project.h  projectsettings.cpp  projectsettings.h  projectsettings.ui  projectsitem.cpp  projectsitem.h  pyprojectsettings.h  pysettings.h  pythonconsoledockwidget.h  qtflow.linux.ini  qtflow.qrc  qtflowfilelist.cpp  qtflowfilelist.h  qtreeviewdragdrop.h  savechanges.cpp  settings.cpp  settings.ui  templates.cpp  templates.h  templates.ui  wave.cpp  wave.h  welcome.h  (+1 more)
contacts/: CMakeLists.txt  contactplacement.cpp  contactplacement.h  contactplacement.ui  contacts.pri  contactsview.cpp  contactsview.h  padinfo.cpp  padinfo.h
def/: CMakeLists.txt  QtDEF.pro  def.pri  def_editor.cpp  def_editor_app.cpp  def_editor_app.h  def_parser.yy  def_scanner.ll  defdata.cpp  defdata.h  defdatapin.cpp  defdatapin.h  deflayouteditor.cpp  deflayouteditor.h  deflayouteditorwidget.cpp  deflayouteditorwidget.h  defmoduleinfo.cpp  defmoduleinfo.h  defrouteinfo.cpp  defrouteinfo.h  defscanner.cpp  defscanner.h  qtdef.cpp
gds2/: CMakeLists.txt  gds2.pri  gdsboundary.cpp  gdsboundary.h  gdscell.cpp  gdscell.h  gdsfile.cpp  gdsfile.h  gdspoint.cpp  gdspoint.h  gdtdata.cpp  gdtdata.h  kvstypes.h
lef/: CMakeLists.txt  lef.pri  lef_parser.yy  lef_scanner.ll  lefdata.cpp  lefdata.h  leflayer.cpp  leflayer.h  leflayerinfo.cpp  leflayerinfo.h  lefmacro.cpp  lefmacro.h  lefobstruction.cpp  lefobstruction.h  lefpin.cpp  lefpin.h  lefport.cpp  lefport.h  lefscanner.cpp  lefscanner.h  lefvia.cpp  lefvia.h
magic/: CMakeLists.txt  magic.pri  magic_editor.cpp  magic_editor_app.cpp  magic_editor_app.h  magic_parser.yy  magic_scanner.ll  magicdata.cpp  magicdata.h  magiclayouteditor.cpp  magiclayouteditor.h  magiclayouteditorwidget.cpp  magiclayouteditorwidget.h  magicscanner.cpp  magicscanner.h  qgraphicslayoutrectitem.cpp  qgraphicslayoutrectitem.h  qgraphicsmacroitem.cpp  qgraphicsmacroitem.h  qgraphicswireitem.cpp  qgraphicswireitem.h  qlayoutscene.cpp  qlayoutscene.h
magic3d/: CMakeLists.txt  glwidget.cpp  glwidget.h  magic3d.cpp  magic3d.h  magic3d.pri
qeditor/: CMakeLists.txt  codeeditorwidget.cpp  codeeditorwidget.h  editorwidget.cpp  editorwidget.h  generictexteditorwidget.cpp  generictexteditorwidget.h
qlayout/: CMakeLists.txt  cellmanager.ui  drcsettings.cpp  drcsettings.h  drcsettings.ui  genericlayouteditor.cpp  genericlayouteditor.h  genericlayouteditorwidget.cpp  genericlayouteditorwidget.h  layoutvisibles.cpp  layoutvisibles.h  layoutvisibles.ui  qlayout.pri  qlayoutcellmanager.cpp  qlayoutcellmanager.h  qlayoutdistancemeasure.cpp  qlayoutdistancemeasure.h  qlayoutlabel.cpp  qlayoutlabel.h  qlayoutmacroitem.cpp  qlayoutmacroitem.h  qlayoutmacropinitem.cpp  qlayoutmacropinitem.h  qlayoutrectitem.cpp  qlayoutrectitem.h  qlayoutscene.cpp  qlayoutscene.h  qlayoutviaitem.cpp  qlayoutviaitem.h  qlayoutwireitem.cpp  qlayoutwireitem.h  tech_data_wrapper.cpp  tech_data_wrapper.hpp
qschematics/: CMakeLists.txt  qschematics.pri  qschematicsparametricpart.cpp  qschematicsparametricpart.h  qschematicspart.cpp  qschematicspart.h  qschematicspin.cpp  qschematicspin.h  qschematicsscene.cpp  qschematicsscene.h  qschematicswire.cpp  qschematicswire.h
schematics/: CMakeLists.txt  parametricpart.ui  partselection.ui  schematics.pri  schematics_parser.yy  schematics_scanner.ll  schematicsdata.cpp  schematicsdata.h  schematicseditor.cpp  schematicseditor.h  schematicseditorwidget.cpp  schematicseditorwidget.h  schematicslibraryeditor.cpp  schematicslibraryeditor.h  schematicsparametricpartdialog.cpp  schematicsparametricpartdialog.h  schematicspart.cpp  schematicspart.h  schematicspartselection.cpp  schematicspartselection.h  schematicsscanner.h  schematicswire.cpp  schematicswire.h
schematics_reader/: CMakeLists.txt  schematics_parser.yy  schematics_reader.pri  schematics_scanner.ll  schematicsdata.cpp  schematicsdata.h  schematicsscanner.h
symbol_reader/: CMakeLists.txt  schematicssymbol.cpp  schematicssymbol.h  symbol_parser.yy  symbol_reader.pri  symbol_scanner.ll  symboldata.cpp  symboldata.h  symbolpin.cpp  symbolpin.h  symbolscanner.cpp  symbolscanner.h
symbols/: CMakeLists.txt  symboleditor.cpp  symboleditor.h  symboleditorscene.cpp  symboleditorscene.h  symboleditorwidget.cpp  symboleditorwidget.h  symbols.pri
tech_reader/: CMakeLists.txt  tech_parser.yy  tech_reader.pri  tech_scanner.ll  techdata.cpp  techdata.h  techdesignrule.cpp  techdesignrule.h  techdesignrulespacing.cpp  techdesignrulespacing.h  techscanner.cpp  techscanner.h
vcd/: CMakeLists.txt  vcd.pri  vcd_data.cpp  vcd_data.hpp  vcd_data_fwd.hpp  vcd_loader.cpp  vcd_loader.h  vcd_loader.hpp  vcd_parser.yy  vcd_scanner.ll  vcdata.cpp  vcdata.h  vcdcommon.h  vcderror.h  vcdlistmodel.cpp  vcdlistmodel.h  vcdscanner.cpp  vcdscanner.h  vcdsignaltreeitem.cpp  vcdsignaltreeitem.h  vcdsignaltreemodel.cpp  vcdsignaltreemodel.h  vcdsignalview.cpp  vcdsignalview.h  vcdsignalviewtreeitem.cpp  vcdsignalviewtreeitem.h  vcdsignalviewtreemodel.cpp  vcdsignalviewtreemodel.h  vcdtreeitem.cpp  vcdtreeitem.h  vcdtreemodel.cpp  vcdtreemodel.h  vcdviewgraphicsitem.cpp  vcdviewgraphicsitem.h  vcdviewgraphicsitembus.h  (+7 more)
(+113 files in other folders)
